crates/solidity/testing/snapshots/bindings_output/expressions/emit_named_args/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:8:17]
   │
 8 │         emit Log({level: 1, name: "Testing"});
   │                 ──────────────┬──────────────  
   │                               ╰──────────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     event Log(
   │           ─┬─  
   │            ╰─── name: 2
 3 │         string name,
   │                ──┬─  
   │                  ╰─── name: 3
 4 │         uint level
   │              ──┬──  
   │                ╰──── name: 4
   │ 
 7 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 5
 8 │         emit Log({level: 1, name: "Testing"});
   │         ──┬─ ─┬─  
   │           ╰─────── unresolved
   │               │   
   │               ╰─── name: 6
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭───│ ▶ contract Test {
  2 │ │   ╭─▶     event Log(
  3 │ │   │           string name,
    │ │   │   ─────────┬─────────  
    │ │   │            ╰─────────── definiens: 3
  4 │ │   │           uint level
    │ │   │   ─────────┬─────────  
    │ │   │            ╰─────────── definiens: 4
  5 │ │ │ ├─▶     );
    │ │ │ │            
    │ │ │ ╰──────────── definiens: 2
  6 │ │ ╭───▶ 
    ┆ ┆ ┆     
  8 │ │ │             emit Log({level: 1, name: "Testing"});
    │ │ │     ───────────────────────┬───────────────────────  
    │ │ │                            ╰───────────────────────── definiens: 6
  9 │ │ ├───▶     }
    │ │ │             
    │ │ ╰───────────── definiens: 5
 10 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 1
────╯
